app/src/main/java/com/example/amfootball/data/errors/ErrorMessage.kt
package com.example.amfootball.data.errors

data class ErrorMessage(
    val messageId: Int,
    val args: List<Any> = emptyList()
)
